--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
     .whatsapp-button:hover {
       background-color: #128C7E;
     }
+    .pdf-button {
+      background-color: #4CAF50;
+    }
+    .pdf-button:hover {
+      background-color: #45a049;
+    }
   </style>
 </head>
 <body>
@@ -238,6 +244,10 @@
 
   <!-- Gesamt X -->
   <div class="total-result" id="total-x"></div>
+<!-- PDF-Button -->
+  <button id="pdf-button" class="pdf-button hidden">PDF-Download</button>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
   <script>
     // Referenzen zu den Elementen
@@ -250,6 +260,8 @@
     const clearButton = document.getElementById('clear');
     const arrowSelect = document.getElementById('arrows');
     const extraArrowsDiv = document.getElementById('extra-arrows');
+    const pdfButton = document.getElementById('pdf-button');
+    const roundField = document.getElementById('round');
 
     let totalPoints = 0;
     let totalX = 0;
@@ -285,76 +297,106 @@
       }
     });
 
-    // Berechne die Punkte für die Runde
-    function calculatePoints() {
-      const arrowPoints = document.querySelectorAll('.arrow-point');
-      let roundResult = 0;
-      let xCount = 0;
-
-      arrowPoints.forEach(arrow => {
-        const value = arrow.value === 'X' ? 10 : parseInt(arrow.value, 10);
-        if (arrow.value === 'X') xCount++;
-        if (!isNaN(value)) {
-          roundResult += value;
-        }
-      });
-
-      roundPointsField.value = roundResult;
-      totalPoints += roundResult;
-      totalPointsField.value = totalPoints;
-      totalX += xCount;
-      totalXDiv.innerHTML = `<strong>Gesamt X:</strong> ${totalX}`;
-    }
-
-    // Ergebnisse absenden
+    // Berechne die Punkte für die Runde und aktualisiere die Anzeige
     submitButton.addEventListener('click', () => {
-      calculatePoints();
+      let roundPoints = 0;
+      let roundX = 0;
+      let arrows = [];
 
-      const participantName = document.getElementById('name').value;
-      const participantResult = document.createElement('div');
-      participantResult.classList.add('participant-result');
-      participantResult.innerHTML = `
-        <p><strong>${participantName}</strong> (Runde ${currentRound})</p>
-        <p>Rundenpunkte: ${roundPointsField.value}</p>
-        <p>Gesamtpunkte: ${totalPoints}</p>
-        <button class="whatsapp-button" onclick="shareResult('${participantName}', ${currentRound}, ${roundPointsField.value}, ${totalPoints})">
-          Ergebnis auf WhatsApp teilen
-        </button>
-      `;
-      participantsResults.appendChild(participantResult);
+      // Pfeilwerte sammeln
+      for (let i = 1; i <= parseInt(arrowSelect.value); i++) {
+        const arrowValue = parseInt(document.getElementById(`arrow${i}`).value);
+        arrows.push(arrowValue);
+        roundPoints += arrowValue;
+        if (arrowValue === 'X') {
+          roundX++;
+        }
+      }
 
-      // Setze die Pfeilwerte zurück (Pfeil 1 bis 6)
-      const arrowPoints = document.querySelectorAll('.arrow-point');
-      arrowPoints.forEach(arrow => arrow.value = '0');
+      totalPoints += roundPoints;
+      totalX += roundX;
 
-      // Erhöhe die Rundenzahl
-      currentRound++;
-      document.getElementById('round').value = currentRound;
+      // Runde und Gesamtpunkte anzeigen
+      roundPointsField.value = roundPoints;
+      totalPointsField.value = totalPoints;
 
-      // Speichere die Daten im localStorage
-      const dataToSave = {
+      // Ergebnisse der Runde anzeigen
+      participantsResults.innerHTML += `<div class="participant-result">
+        <p>Runde ${currentRound}: ${roundPoints} Punkte (X: ${roundX})</p>
+        <button class="whatsapp-button" onclick="shareResult('${document.getElementById('name').value}', ${currentRound}, ${roundPoints}, ${totalPoints})">Teilen auf WhatsApp</button>
+      </div>`;
+
+      // Wenn Runde 10 erreicht ist, nach Fortsetzung fragen
+      if (currentRound === 10) {
+        if (confirm("Möchten Sie das Turnier fortsetzen?")) {
+          pdfButton.classList.remove('hidden');
+        }
+      }
+
+      // PDF-Button nach Runde 12 anzeigen
+      if (currentRound >= 12) {
+        pdfButton.classList.remove('hidden');
+      }
+
+      // Speichern der Ergebnisse im localStorage
+      localStorage.setItem('tournamentData', JSON.stringify({
         tournament: document.getElementById('tournament').value,
         name: document.getElementById('name').value,
         distance: document.getElementById('distance').value,
         target: document.getElementById('target').value,
         round: currentRound,
-        totalPoints: totalPoints,
-        totalX: totalX,
-        participantsResults: participantsResults.innerHTML
-      };
+        totalPoints,
+        totalX,
+        participantsResults: participantsResults.innerHTML,
+      }));
 
-      localStorage.setItem('tournamentData', JSON.stringify(dataToSave));
+      currentRound++;
+      roundField.value = currentRound;
     });
 
     // Formular zurücksetzen
     clearButton.addEventListener('click', () => {
-      localStorage.removeItem('tournamentData');
-      window.location.reload();
+      if (confirm("Sind Sie sicher, dass Sie das Formular löschen möchten?")) {
+        localStorage.removeItem('tournamentData');
+        location.reload();
+      }
     });
 
-    // WhatsApp teilen Funktion
+    // PDF-Download erstellen
+    pdfButton.addEventListener('click', () => {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+
+      doc.text('Turnierergebnisse', 10, 10);
+      doc.text(`Turniername: ${document.getElementById('tournament').value}`, 10, 20);
+      doc.text(`Gesamt X: ${totalX}`, 10, 30);
+      doc.text(`Gesamtpunkte: ${totalPoints}`, 10, 40);
+
+      const results = participantsResults.children;
+      let yOffset = 50;
+      let pageHeight = doc.internal.pageSize.height;
+
+      for (let i = 0; i < results.length; i++) {
+        const resultText = results[i].innerText;
+        doc.text(resultText, 10, yOffset);
+        yOffset += 10;
+
+        // Neue Seite bei Bedarf hinzufügen
+        if (yOffset > pageHeight - 20) {
+          doc.addPage();
+          yOffset = 10;
+        }
+      }
+
+      doc.save('ergebnisse.pdf');
+    });
+
+    // WhatsApp teilen
     function shareResult(name, round, roundPoints, totalPoints) {
-      const message = `Ergebnis von ${name} (Runde ${round}):\nRundenpunkte: ${roundPoints}\nGesamtpunkte: ${totalPoints}`;
+      const message = `Turnier: ${document.getElementById('tournament').value}\n` +
+                      `Teilnehmer: ${name}\n` +
+                      `Runde ${round}: ${roundPoints} Punkte\n` +
+                      `Gesamt: ${totalPoints} Punkte`;
       const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(message)}`;
       window.open(whatsappUrl, '_blank');
     }
