--- a/index.html
+++ b/index.html
@@ -1,130 +1,130 @@
 <!DOCTYPE html>
 <html lang="de">
-<Kopf>
+<head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=Gerätebreite, Anfangsmaßstab=1.0">
-  <title>Punktezähler</title>
-  <Stil>
-    Körper {
-      Schriftfamilie: Arial, serifenlos;
-      Rand: 20px;
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Punkte Zähler</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
     }
-    Etikett {
-      Anzeige: Block;
-      Rand: 10px 0 5px;
+    label {
+      display: block;
+      margin: 10px 0 5px;
     }
-    auswählen, eingeben {
-      Breite: 100 %;
-      Polsterung: 8px;
-      Rand unten: 10px;
+    select, input {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
     }
-    Taste {
-      Polsterung: 10px;
-      Hintergrundfarbe: #007BFF;
-      Farbe: weiß;
-      Rand: keiner;
-      Cursor: Zeiger;
+    button {
+      padding: 10px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      cursor: pointer;
     }
-    Schaltfläche: schweben {
-      Hintergrundfarbe: #0056b3;
+    button:hover {
+      background-color: #0056b3;
     }
-    .Ergebnisse {
-      Rand oben: 20px;
-      Rahmen oben: 2px durchgezogen #ccc;
-      Polsterung oben: 10px;
+    .results {
+      margin-top: 20px;
+      border-top: 2px solid #ccc;
+      padding-top: 10px;
     }
-    .versteckt {
-      Anzeige: keine;
+    .hidden {
+      display: none;
     }
-    .Teilnehmer-Ergebnis {
-      Rand unten: 10px;
+    .participant-result {
+      margin-bottom: 10px;
     }
-    .Teilnehmer-Ergebnis p {
-      Rand: 0;
+    .participant-result p {
+      margin: 0;
     }
-    .Gesamtergebnis {
-      Schriftgröße: 1,5em;
-      Schriftstärke: fett;
-      Rand oben: 20px;
+    .total-result {
+      font-size: 1.5em;
+      font-weight: bold;
+      margin-top: 20px;
     }
     hr {
-      Rand oben: 20px;
-      Rand unten: 20px;
-      Rand: 0;
-      Rahmen oben: 1px durchgezogen #ccc;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      border: 0;
+      border-top: 1px solid #ccc;
     }
     .whatsapp-button {
-      Rand oben: 10px;
-      Hintergrundfarbe: #25D366;
-      Farbe: weiß;
-      Rand: keiner;
-      Polsterung: 8px;
-      Schriftgröße: 14px;
-      Cursor: Zeiger;
-      Rahmenradius: 5px;
+      margin-top: 10px;
+      background-color: #25D366;
+      color: white;
+      border: none;
+      padding: 8px;
+      font-size: 14px;
+      cursor: pointer;
+      border-radius: 5px;
     }
     .whatsapp-button:hover {
-      Hintergrundfarbe: #128C7E;
+      background-color: #128C7E;
     }
-  </Stil>
-</Kopf>
-<Text>
-  <h1>Punktezähler</h1>
+  </style>
+</head>
+<body>
+  <h1>Punkte Zähler</h1>
   
   <!-- Turnier -->
-  <label for="turnier">Turnier</label>
+  <label for="tournament">Turnier</label>
   <input type="text" id="tournament" placeholder="Turniername">
 
   <!-- Name -->
-  <label für="name">Name</label>
-  <ID auswählen="Name">
-    <option value="" deaktiviert selected>Bitte Name auswählen</option>
+  <label for="name">Name</label>
+  <select id="name">
+    <option value="" disabled selected>Bitte Name auswählen</option>
     <option>Paul Lüders</option>
     <option>Jan Grüning</option>
-  </Auswählen>
+  </select>
 
   <!-- Runde -->
   <label for="round">Runde</label>
-  <Eingabetyp="Nummer" ID="Runde" Wert="1" schreibgeschützt>
+  <input type="number" id="round" value="1" readonly>
 
   <!-- Entfernung -->
   <label for="distance">Entfernung</label>
-  <select id="Entfernung">
+  <select id="distance">
     <option value="bitte auswählen">bitte auswählen</option>
-    <option value="10m">10 m</option>
-    <option value="18m">18 m</option>
-    <option value="20m">20 m</option>
-    <option value="30m">30 m</option>
-    <option value="40m">40 m</option>
-    <option value="50m">50 m</option>
-  </Auswählen>
+    <option value="10m">10m</option>
+    <option value="18m">18m</option>
+    <option value="20m">20m</option>
+    <option value="30m">30m</option>
+    <option value="40m">40m</option>
+    <option value="50m">50m</option>
+  </select>
 
   <!-- Auflage -->
   <label for="target">Auflage</label>
-  <ID auswählen="Ziel">
+  <select id="target">
     <option value="bitte auswählen">bitte auswählen</option>
     <option value="120cm">120 cm</option>
     <option value="80cm">80 cm</option>
     <option value="60cm">60 cm</option>
     <option value="40cm">40 cm</option>
-  </Auswählen>
+  </select>
 
   <!-- Pfeile -->
   <label for="arrows">Pfeile</label>
-  <ID auswählen="Pfeile">
+  <select id="arrows">
     <option value="3">3</option>
     <option value="6">6</option>
-  </Auswählen>
+  </select>
 
   <!-- Pfeil 1 bis Pfeil 6 -->
-  <div id="Pfeilpunkte">
+  <div id="arrow-points">
     <label for="arrow1">Pfeil 1</label>
-    <Klasse auswählen="Pfeilpunkt" id="Pfeil1">
-      <optionswert="0">0</option>
-      <optionswert="1">1</option>
-      <optionswert="2">2</option>
+    <select class="arrow-point" id="arrow1">
+      <option value="0">0</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
       <option value="3">3</option>
-      <optionswert="4">4</option>
+      <option value="4">4</option>
       <option value="5">5</option>
       <option value="6">6</option>
       <option value="7">7</option>
@@ -132,15 +132,15 @@
       <option value="9">9</option>
       <option value="10">10</option>
       <option value="X">X</option>
-    </Auswählen>
+    </select>
 
     <label for="arrow2">Pfeil 2</label>
-    <Klasse auswählen="Pfeilpunkt" id="Pfeil2">
-      <optionswert="0">0</option>
-      <optionswert="1">1</option>
-      <optionswert="2">2</option>
+    <select class="arrow-point" id="arrow2">
+      <option value="0">0</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
       <option value="3">3</option>
-      <optionswert="4">4</option>
+      <option value="4">4</option>
       <option value="5">5</option>
       <option value="6">6</option>
       <option value="7">7</option>
@@ -148,15 +148,15 @@
       <option value="9">9</option>
       <option value="10">10</option>
       <option value="X">X</option>
-    </Auswählen>
+    </select>
 
     <label for="arrow3">Pfeil 3</label>
-    <Klasse auswählen="Pfeilpunkt" id="Pfeil3">
-      <optionswert="0">0</option>
-      <optionswert="1">1</option>
-      <optionswert="2">2</option>
+    <select class="arrow-point" id="arrow3">
+      <option value="0">0</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
       <option value="3">3</option>
-      <optionswert="4">4</option>
+      <option value="4">4</option>
       <option value="5">5</option>
       <option value="6">6</option>
       <option value="7">7</option>
@@ -164,17 +164,17 @@
       <option value="9">9</option>
       <option value="10">10</option>
       <option value="X">X</option>
-    </Auswählen>
+    </select>
 
     <!-- Pfeil 4 bis 6 -->
-    <div id="extra-arrows" Klasse="versteckt">
+    <div id="extra-arrows" class="hidden">
       <label for="arrow4">Pfeil 4</label>
-      <Klasse auswählen="Pfeilpunkt" id="Pfeil4">
-        <optionswert="0">0</option>
-        <optionswert="1">1</option>
-        <optionswert="2">2</option>
+      <select class="arrow-point" id="arrow4">
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
         <option value="3">3</option>
-        <optionswert="4">4</option>
+        <option value="4">4</option>
         <option value="5">5</option>
         <option value="6">6</option>
         <option value="7">7</option>
@@ -182,15 +182,15 @@
         <option value="9">9</option>
         <option value="10">10</option>
         <option value="X">X</option>
-      </Auswählen>
+      </select>
 
       <label for="arrow5">Pfeil 5</label>
-      <Klasse auswählen="Pfeilpunkt" id="Pfeil5">
-        <optionswert="0">0</option>
-        <optionswert="1">1</option>
-        <optionswert="2">2</option>
+      <select class="arrow-point" id="arrow5">
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
         <option value="3">3</option>
-        <optionswert="4">4</option>
+        <option value="4">4</option>
         <option value="5">5</option>
         <option value="6">6</option>
         <option value="7">7</option>
@@ -198,15 +198,15 @@
         <option value="9">9</option>
         <option value="10">10</option>
         <option value="X">X</option>
-      </Auswählen>
+      </select>
 
       <label for="arrow6">Pfeil 6</label>
-      <Klasse auswählen="Pfeilpunkt" id="Pfeil6">
-        <optionswert="0">0</option>
-        <optionswert="1">1</option>
-        <optionswert="2">2</option>
+      <select class="arrow-point" id="arrow6">
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
         <option value="3">3</option>
-        <optionswert="4">4</option>
+        <option value="4">4</option>
         <option value="5">5</option>
         <option value="6">6</option>
         <option value="7">7</option>
@@ -214,150 +214,150 @@
         <option value="9">9</option>
         <option value="10">10</option>
         <option value="X">X</option>
-      </Auswählen>
+      </select>
     </div>
   </div>
 
   <!-- Rundenpunkte -->
   <label>Rundenpunkte</label>
-  <Eingabetyp="Nummer" ID="Rundenpunkte" Wert="0" schreibgeschützt>
+  <input type="number" id="round-points" value="0" readonly>
 
   <!-- Gesamtpunkte -->
   <label>Gesamtpunkte</label>
-  <Eingabetyp="Nummer" ID="Gesamtpunktzahl" Wert="0" schreibgeschützt>
+  <input type="number" id="total-points" value="0" readonly>
 
-  <!-- Schaltflächen -->
+  <!-- Buttons -->
   <button id="submit">Absenden</button>
   <button id="clear">Formular leeren</button>
 
   <!-- Ergebnisse -->
-  <div class="Ergebnisse">
+  <div class="results">
     <h3>Ergebnisse der Teilnehmer:</h3>
-    <div id="Teilnehmer-Ergebnisse"></div>
+    <div id="participants-results"></div>
   </div>
 
   <!-- Gesamt X -->
-  <div Klasse="total-result" id="total-x"></div>
+  <div class="total-result" id="total-x"></div>
 
-  <Skript>
+  <script>
     // Referenzen zu den Elementen
-    const formFields = ['Turnier', 'Name', 'Distanz', 'Ziel'];
+    const formFields = ['tournament', 'name', 'distance', 'target'];
     const roundPointsField = document.getElementById('round-points');
     const totalPointsField = document.getElementById('total-points');
     const participantsResults = document.getElementById('participants-results');
     const totalXDiv = document.getElementById('total-x');
-    const submitButton = document.getElementById('senden');
+    const submitButton = document.getElementById('submit');
     const clearButton = document.getElementById('clear');
-    const arrowSelect = document.getElementById('Pfeile');
+    const arrowSelect = document.getElementById('arrows');
     const extraArrowsDiv = document.getElementById('extra-arrows');
 
-    Lassen Sie totalPoints = 0;
-    sei totalX = 0;
-    sei currentRound = 1;
+    let totalPoints = 0;
+    let totalX = 0;
+    let currentRound = 1;
 
     // Lade gespeicherte Daten aus dem localStorage
-    fenster.onload = funktion() {
-      const gespeicherteData = JSON.parse(localStorage.getItem('tournamentData')) || {};
+    window.onload = function() {
+      const storedData = JSON.parse(localStorage.getItem('tournamentData')) || {};
       
       // Setze gespeicherte Werte
-      document.getElementById('tournament').value = gespeicherteDaten.tournament || '';
-      document.getElementById('name').value = gespeicherteDaten.name || '';
-      document.getElementById('Entfernung').value = gespeicherteDaten.Entfernung || '';
-      document.getElementById('target').value = gespeicherteDaten.target || '';
-      document.getElementById('round').value = gespeicherteDaten.round || 1;
-      totalPoints = gespeicherteDaten.totalPoints || 0;
-      totalX = gespeicherteDaten.totalX || 0;
+      document.getElementById('tournament').value = storedData.tournament || '';
+      document.getElementById('name').value = storedData.name || '';
+      document.getElementById('distance').value = storedData.distance || '';
+      document.getElementById('target').value = storedData.target || '';
+      document.getElementById('round').value = storedData.round || 1;
+      totalPoints = storedData.totalPoints || 0;
+      totalX = storedData.totalX || 0;
 
       // Setze Teilnehmerergebnisse
-      TeilnehmerErgebnisse.innerHTML = gespeicherteDaten.TeilnehmerErgebnisse || '';
-      totalXDiv.innerHTML = `<strong>Gesamt X:</strong> ${totalX}`;
+      participantsResults.innerHTML = storedData.participantsResults || '';
+      totalXDiv.innerHTML = <strong>Gesamt X:</strong> ${totalX};
 
       // Wenn es gespeicherte Daten gibt, wird die Rundenzahl fortgesetzt
-      aktuelleRunde = gespeicherteDaten.Runde || 1;
+      currentRound = storedData.round || 1;
     };
 
     // Zeigt zusätzliche Pfeile, wenn 6 Pfeile gewählt sind
-    arrowSelect.addEventListener('ändern', () => {
-      wenn (PfeilAuswahl.Wert === '6') {
+    arrowSelect.addEventListener('change', () => {
+      if (arrowSelect.value === '6') {
         extraArrowsDiv.classList.remove('hidden');
-      } anders {
+      } else {
         extraArrowsDiv.classList.add('hidden');
       }
     });
 
     // Berechne die Punkte für die Runde
-    Funktion Punkte berechnen() {
+    function calculatePoints() {
       const arrowPoints = document.querySelectorAll('.arrow-point');
-      lass roundResult = 0;
-      sei xCount = 0;
+      let roundResult = 0;
+      let xCount = 0;
 
-      Pfeilpunkte.fürJeden(Pfeil => {
-        const-Wert = Pfeil.Wert === 'X'? 10: parseInt(Pfeil.Wert, 10);
-        wenn (Pfeil.Wert === 'X') xCount++;
-        wenn (!isNaN(Wert)) {
-          rundesErgebnis += Wert;
+      arrowPoints.forEach(arrow => {
+        const value = arrow.value === 'X' ? 10 : parseInt(arrow.value, 10);
+        if (arrow.value === 'X') xCount++;
+        if (!isNaN(value)) {
+          roundResult += value;
         }
       });
 
-      RundePunkteFeld.Wert = RundesErgebnis;
-      Gesamtpunkte += Rundenergebnis;
+      roundPointsField.value = roundResult;
+      totalPoints += roundResult;
       totalPointsField.value = totalPoints;
-      GesamtX + = xAnzahl;
-      totalXDiv.innerHTML = `<strong>Gesamt X:</strong> ${totalX}`;
+      totalX += xCount;
+      totalXDiv.innerHTML = <strong>Gesamt X:</strong> ${totalX};
     }
 
     // Ergebnisse absenden
-    submitButton.addEventListener('klicken', () => {
-      Punkte berechnen();
+    submitButton.addEventListener('click', () => {
+      calculatePoints();
 
-      const Teilnehmername = document.getElementById('name').value;
+      const participantName = document.getElementById('name').value;
       const participantResult = document.createElement('div');
-      participantResult.classList.add('Teilnehmerergebnis');
-      memberResult.innerHTML = `
+      participantResult.classList.add('participant-result');
+      participantResult.innerHTML = 
         <p><strong>${participantName}</strong> (Runde ${currentRound})</p>
-        <p>Rundungspunkte: ${roundPointsField.value}</p>
+        <p>Rundenpunkte: ${roundPointsField.value}</p>
         <p>Gesamtpunkte: ${totalPoints}</p>
         <button class="whatsapp-button" onclick="shareResult('${participantName}', ${currentRound}, ${roundPointsField.value}, ${totalPoints})">
           Ergebnis auf WhatsApp teilen
         </button>
-      `;
-      Teilnehmerergebnisse.appendChild(Teilnehmerergebnis);
+      ;
+      participantsResults.appendChild(participantResult);
 
       // Setze die Pfeilwerte zurück (Pfeil 1 bis 6)
       const arrowPoints = document.querySelectorAll('.arrow-point');
-      Pfeilpunkte.fürJeden(Pfeil => Pfeil.Wert = '0');
+      arrowPoints.forEach(arrow => arrow.value = '0');
 
       // Erhöhe die Rundenzahl
-      aktuelleRunde++;
-      document.getElementById('round').value = aktuelleRunde;
+      currentRound++;
+      document.getElementById('round').value = currentRound;
 
       // Speichere die Daten im localStorage
       const dataToSave = {
-        Turnier: document.getElementById('tournament').value,
-        Name: document.getElementById('name').value,
-        Entfernung: document.getElementById('Entfernung').Wert,
-        Ziel: document.getElementById('Ziel').Wert,
-        Runde: aktuelleRunde,
-        Gesamtpunkte: Gesamtpunkte,
-        GesamtX: GesamtX,
-        TeilnehmerErgebnisse: TeilnehmerErgebnisse.innerHTML
+        tournament: document.getElementById('tournament').value,
+        name: document.getElementById('name').value,
+        distance: document.getElementById('distance').value,
+        target: document.getElementById('target').value,
+        round: currentRound,
+        totalPoints: totalPoints,
+        totalX: totalX,
+        participantsResults: participantsResults.innerHTML
       };
 
       localStorage.setItem('tournamentData', JSON.stringify(dataToSave));
     });
 
     // Formular zurücksetzen
-    clearButton.addEventListener('klicken', () => {
-      localStorage.removeItem('Turnierdaten');
-      fenster.standort.neuladen();
+    clearButton.addEventListener('click', () => {
+      localStorage.removeItem('tournamentData');
+      window.location.reload();
     });
 
     // WhatsApp teilen Funktion
-    Funktion shareResult(Name, Runde, Rundenpunkte, Gesamtpunkte) {
-      const message = `Ergebnis von ${name} (Runde ${round}):\nRundenpunkte: ${roundPoints}\nGesamtpunkte: ${totalPoints}`;
-      const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(message)}`;
-      Fenster.öffnen(whatsappUrl, '_blank');
+    function shareResult(name, round, roundPoints, totalPoints) {
+      const message = Ergebnis von ${name} (Runde ${round}):\nRundenpunkte: ${roundPoints}\nGesamtpunkte: ${totalPoints};
+      const whatsappUrl = https://wa.me/?text=${encodeURIComponent(message)};
+      window.open(whatsappUrl, '_blank');
     }
-  </Skript>
+  </script>
 </body>
-</html>
+</html> 
